# SocialGenius-AI

./: .env.example  .gitattributes  .gitignore  README.md
backend/: .env.example  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  socialgenius.db-journal
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_pgvector_rag_chunks.py  b2c3d4e5f6a7_fix_production_schema.py  bc70a3e09f0d_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: engine.py  schemas.py
backend/app/ai/prompts/: business_analysis.py  calendar_creation.py  content_strategy.py  copywriting.py  hashtag_research.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  businesses.py  calendars.py  chat.py  content.py  conversations.py  documents.py  router.py  subscriptions.py
backend/app/core/: constants.py  exceptions.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  business.py  content_calendar.py  content_piece.py  conversation.py  document.py  message.py  rag_chunk.py  subscription.py  user.py  user_activity.py
backend/app/schemas/: admin.py  auth.py  business.py  content_calendar.py  content_piece.py  conversation.py  message.py  subscription.py  user.py
backend/app/services/: admin_service.py  auth_service.py  business_service.py  chat_service.py  conversation_service.py  rag_service.py  usage_service.py
backend/tests/: conftest.py  test_auth.py  test_businesses.py  test_calendar_parser.py  test_security.py
frontend/: .env.local.example  package-lock.json  (+1 more)
(+30 files in other folders)
